# gymnasium

./: .gitattributes  MODEL_INTEGRATION.md  README.md  READY_TO_TRAIN.md  STAGE_D_AND_E_GUIDE.md  STEP_0_COMPLETE.md  pyproject.toml  requirements.txt  rl_gymnasium_plan.md  test_improvements.py  test_ppo_pipeline.py  test_rollout.py  test_shaped_quick.py  test_stockfish.py  train_main.py
data/checkpoints/: pretrained.pth  trained_ppo_final.pth
rl/: __init__.py
rl/configs/: env.json  train_ppo.json  train_ppo_all_improved.json  train_ppo_balanced.json  train_ppo_parallel.json  train_ppo_shaped_rewards.json  train_ppo_with_stockfish.json
rl/env/: __init__.py  action_space.py  chess_env.py  chessformer_encoding.py  encoding.py  rewards.py
rl/models/: __init__.py  checkpoint.py  chessformer_adapter.py
rl/opponents/: __init__.py  base.py  random_player.py  snapshot_player.py  stockfish_player.py
rl/rollouts/: __init__.py  buffers.py  parallel_runner.py  runner.py
rl/scripts/: smoke_action_space.py  smoke_encoding.py  smoke_model_vs_random.py  smoke_selfplay.py  test_chessformer.py
rl/train/: __init__.py  losses.py  ppo.py
